--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="DesafioCIAg">
+    <meta property="og:image" content="https://www.ciag.org.br/assets/img/logo_azul.png">
+    <meta property="og:url" content="https://victormmontanari.github.io/DesafioCIAg/">
     <title>DesafioCIAg</title>
 
     <!-- Bootstrap -->
